Fix truncate

--- a/src/components/BadgeTable.module.css
+++ b/src/components/BadgeTable.module.css
@@ -26,7 +26,10 @@
     @apply bg-gray-50;
   }
   .style tbody tr th div{
-    @apply min-h-[32px] font-medium text-numba-black  px-4 truncate w-64 flex items-center;
+    @apply min-h-[32px] font-medium text-numba-black  pl-4 truncate w-64 flex items-center;
+  }
+  .style tbody tr th div p{
+    @apply truncate;
   }
   .style tbody tr td {
     @apply self-center py-2 px-2;
